# py-fast-s3-url

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
fast_s3_url/: __init__.py  credentials.py  s3_signer.py  util.py
test/: conftest.py
test/integration/: test_integration.py
test/perf/: test_perf.py
test/unit/: test_signed_url_comparison.py  test_validation.py
test/util/: url_comparison.py
