[tool.poetry]
name = "fast-s3-url"
version = "0.1.0"
description = "An S3 signed URL generator, faster than boto3's, for generating lots of signed URLs quickly."
authors = ["André Carvalho <afecarvalho@gmail.com>"]
readme = "README.md"
packages = [
    {include = "fast_s3_url"},
    {include = "fast_s3_url/py.typed"}
]
license = "MIT"
homepage = "https://github.com/RedRoserade/py-fast-s3-url"
repository = "https://github.com/RedRoserade/py-fast-s3-url"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
aiobotocore = "^2.4.1"
pytest = "^7.2.0"
pytest-benchmark = "^4.0.0"
types-aiobotocore-lite = {extras = ["s3"], version = "^2.4.1"}
py-spy = "^0.3.14"
black = "^22.12.0"
freezegun = "^1.2.2"
pytest-asyncio = "^0.20.3"
boto3 = "<1.26.27"
boto3-stubs-lite = {extras = ["s3"], version = "^1.26.27"}
pytest-freezegun = "^0.4.2"
requests = "^2.28.1"
isort = "^5.10.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
